--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ h1.titre {
 
 h2.titre {
     padding: 0.5rem;
+    font-size: 1.3rem;
     text-align: center;
     margin: 0 auto;
-    text-align: center;
 }
 .titredroite{
     width: 30vw;
@@ -126,8 +126,9 @@ form {
     justify-content: space-around;
     margin-bottom: 2.5rem;
 }
-#choiImage {
+#selectionImage {
     border: 1px solid #2F80ED;
+    background-color: #f6f6f6;
     width: 60%;
     height: 30%;
     transform: translateX(-1vw);
@@ -137,28 +138,34 @@ form {
     border: 1px solid #2F80ED;
     transform: translateX(-2vw);
 }
+.image img {
+    width: 100%;
+}
 
 .coloneTexte {
-    background-color: red;
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
-    color: #949191;
+    color: #2F80ED;
+    text-align: justify;
     font-weight: 900;
     line-height: 1.7rem;
     width: 60%;
     background-color: #fff;
 }
-.zone-users {
+.coloneTexteBio {
+    font-weight: 400;
+}
+.zoneUtilisateurs {
     display: flex;
     flex-direction: column;
     height: 85vh;
     overflow-y: scroll;
-    /* height: 40px; */
 }
 .lineUser {
     display: flex;
+    justify-items: space-between;
     background-color: #fff;
     padding: 1rem 0rem;
     padding-left: 0.5rem;
@@ -166,11 +173,18 @@ form {
     border: 2px solid white;
     border-radius: 5px;
 }
-.colonneImage {
-    width: 25%;
-}
+
 .colonneImage img {
     width: 80%;
+    border-radius: 100%;
+    height: 100%;
+}
+.colonneImage {
+    /* border: 1px solid black; */
+    text-align: center;
+    height: 18vh;
+    width: 25%;
+    padding-right: 1rem;
     border-radius: 100%;
 }
 .colonneCroix {
